<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.register.EnterPhoneNumberFragment">

    <EditText
        android:id="@+id/register_input_phone_number"
        style="@style/editText"
        android:autofillHints=""
        android:backgroundTint="@color/material_default"
        android:hint="@string/number_phone"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/register_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:backgroundTint="@color/material_default"
        android:contentDescription="@string/switching_to_another_window"
        android:text="@string/btn_text_next"
        android:textColor="@color/material_drawer_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>