<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".ui.screens.register.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="@dimen/img_width_icon_normal"
        android:layout_height="@dimen/img_height_icon_normal"
        android:layout_marginTop="@dimen/app_margin"
        android:contentDescription="@string/cd_register_img"
        android:src="@drawable/img_register_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_small_margin"
        android:fontFamily="@font/chivo"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/purple_0"
        android:textSize="@dimen/normalText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_img" />

    <TextView
        android:id="@+id/register_text_we_sent"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/app_small_margin"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/chivo"
        android:gravity="center"
        android:text="@string/register_text_we_sent"
        android:textColor="@color/black_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_enter_code" />

    <com.chaos.view.PinView
        android:id="@+id/register_input_code"
        style="@style/style_pinView"
        android:hint="@string/text_123456"
        app:cursorColor="@color/purple_0"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="15dp"
        app:itemSpacing="0dp"
        app:itemWidth="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_we_sent"
        app:lineColor="@color/purple_0"
        app:lineWidth="2dp"
        app:viewType="rectangle"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>